Closed Bug 1091725 Opened 10 years ago Closed 10 years ago

Fix barrier computation for MNewDerivedTypedObject

Categories

(Core :: JavaScript Engine: JIT, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: bhackett1024, Assigned: bhackett1024)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
After bug 1069688 and bug 1083600 the code which determines whether to add barriers on MNewDerivedTypedObject is incorrect, and barriers more instructions than necessary.  Fixing this will fix the regression in misc-typedobj-write-struct-field-typedobj.js on AWFY from from bug 1083600.
Attachment #8514387 - Flags: review?(nmatsakis)
Comment on attachment 8514387 [details] [diff] [review]
patch

Review of attachment 8514387 [details] [diff] [review]:
-----------------------------------------------------------------

::: js/src/jit/IonBuilder.cpp
@@ +7386,5 @@
>                                                                  ownerOffset);
>      current->add(derivedTypedObj);
>      current->push(derivedTypedObj);
>  
> +    // Determine (if possible) the class/proto that `derivedTypedObj` will 

Nit: trailing whitespace
Attachment #8514387 - Flags: review?(nmatsakis) → review+
https://hg.mozilla.org/mozilla-central/rev/7f3832f15cb6
Assignee: nobody → bhackett1024
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: