Bug 1091725 - Fix barrier computation for MNewDerivedTypedObject, r=nmatsakis.